refactor: rename user related services to be more generic. use different DTO inside friend request info (without details) feat: create dto for public user information. create endpoint for searching users via username.